objects/FinancialAccountContact__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <formula>Contact__r.LastName &amp; ", " &amp; Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact related to the Financial Account</description>
        <inlineHelpText>Contact related to the Financial Account</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Account Contact</relationshipLabel>
        <relationshipName>Financial_Account_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this contact is the primary contact for the Financial Account</description>
        <inlineHelpText>Is the contact the primary contact for the Financial Account?</inlineHelpText>
        <label>Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates the status of the contact's relationship to the Financial Account</description>
        <inlineHelpText>Indicate the status of the contact's relationship to the Financial Account</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Inactivated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates the type of relationship this contact has to the Financial Account</description>
        <inlineHelpText>Indicate the type of relationship this contact has to the Financial Account</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End Client</fullName>
                </value>
                <value>
                    <fullName>Financial Advisor</fullName>
                    <default>true</default>
                    <label>Financial Advisor</label>
                </value>
                <value>
                    <fullName>Interested 3rd Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_Financial_Account_in_Community__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this contact should see the Financial Account in the community.</description>
        <inlineHelpText>If checked, the contact will be able to see the Financial Account in the community</inlineHelpText>
        <label>View Financial Account in Community?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <description>Financial Account to which this contact is related</description>
        <inlineHelpText>Financial Account to which this contact is related</inlineHelpText>
        <label>Financial Account</label>
        <referenceTo>FinancialAccount__c</referenceTo>
        <relationshipLabel>Financial Account Contact</relationshipLabel>
        <relationshipName>Financial_Account_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>Tracks contacts associated with a Financial Account.  Dictates which contacts (community users) can see a particular Financial Account in the community.</description>
    <label>Financial Account Contact</label>
    <nameField>
        <displayFormat>FAC-{000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>